Update tests, try fix bugs